--- a/BulkyBook.Web/Views/Category/Index.cshtml
+++ b/BulkyBook.Web/Views/Category/Index.cshtml
@@ -1,7 +1,27 @@
-﻿
+﻿@model IEnumerable<Category>
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>Index Category</h1>
 
+<table class="table caption-top table-bordered">
+    <caption>List of Categories</caption>
+    <thead>
+        <tr>
+            <th scope="col" class="text-center">Category Name</th>
+            <th scope="col" class="text-center">Display Order</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var obj in Model)
+        {
+            <tr>
+                @*                <th scope="row">1</th>
+                *@
+                <td class="text-center">@obj.Name</td>
+                <td class="text-center">@obj.DisplayOrder</td>
+            </tr>
+        }
+    </tbody>
+</table>
