--- a/BulkyBook.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBook.Web/Views/Shared/_Layout.cshtml
@@ -43,9 +43,9 @@
         </main>
     </div>
 
-    <footer class="footer text-muted footer">
-        <div class="container">
-            &copy; 2022 - BulkyBook.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="footer text-muted footer ">
+        <div class="container text-light">
+            &copy; 2022 - BulkyBook.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-light">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
