--- a/BulkyBook.Web/Views/Category/Create.cshtml
+++ b/BulkyBook.Web/Views/Category/Create.cshtml
@@ -16,11 +16,12 @@
                     <div class="form-group m-3 mt-1">
                         <label asp-for="Name" class="form-label"></label>
                         <input asp-for="Name" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name" />
-                        @*<small id="name" class="form-text text-muted">We'll never share your email with anyone else.</small>*@
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group m-3 mt-1">
                         <label asp-for="DisplayOrder" class="form-label"></label>
                         <input asp-for="DisplayOrder" type="number" class="form-control" id="order" placeholder="Display Order" />
+                        <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                     </div>
                     <button type="submit" class="btn btn-dark m-2">Create</button>
                     <a class="btn btn-dark m-2" asp-area=" asp-controller="Category" asp-action="Index">
