--- a/BulkyBook.Web/Views/Category/Create.cshtml
+++ b/BulkyBook.Web/Views/Category/Create.cshtml
@@ -1,16 +1,17 @@
 ﻿@model Category
 
-
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
             <h2 class="text-dark">Create Category</h2>
         </div>
-
         <hr />
     </div>
+
+    <div class="pt-2" asp-validation-summary="All"></div>
+
     <form method="post">
-        <div class="p-3">
+        <div class="px-3">
             <div>
                 <fieldset>
                     <div class="form-group m-3 mt-1">
