--- a/BulkyBook.Web/Views/Category/Index.cshtml
+++ b/BulkyBook.Web/Views/Category/Index.cshtml
@@ -25,6 +25,7 @@
                 <tr>
                     <th scope="col" class="text-center">Category Name</th>
                     <th scope="col" class="text-center">Display Order</th>
+                    <th scope="col" class="text-center">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -35,6 +36,12 @@
                         *@
                         <td class="text-center">@obj.Name</td>
                         <td class="text-center">@obj.DisplayOrder</td>
+                        <td class="text-center">
+                            <div class="d-grid gap-2 d-md-block">
+                                <a class="btn btn-dark" role="button" asp-area="" asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"> <i class="bi bi-pencil-square"></i></a>
+                                <a class="btn btn-dark" href="#" role="button"><i class="bi bi-trash3"></i></a>
+                            </div>
+                        </td>
                     </tr>
                 }
             </tbody>
