--- a/BulkyBook.Web/Views/Category/Index.cshtml
+++ b/BulkyBook.Web/Views/Category/Index.cshtml
@@ -39,7 +39,7 @@
                         <td class="text-center">
                             <div class="d-grid gap-2 d-md-block">
                                 <a class="btn btn-dark" role="button" asp-area="" asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"> <i class="bi bi-pencil-square"></i></a>
-                                <a class="btn btn-dark" href="#" role="button"><i class="bi bi-trash3"></i></a>
+                                <a class="btn btn-dark" role="button" asp-area="" asp-controller="Category" asp-action="Remove" asp-route-id="@obj.Id"><i class="bi bi-trash3"></i></a>
                             </div>
                         </td>
                     </tr>
