--- a/BulkyBook.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBook.Web/Views/Shared/_Layout.cshtml
@@ -31,10 +31,10 @@
                             <a class="nav-link" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
                         </li>
                     </ul>
-                    <form class="d-flex">
+                    @*<form class="d-flex">
                         <input class="form-control me-sm-2" type="text" placeholder="Search">
                         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                    </form>
+                        </form>*@
                 </div>
             </div>
         </nav>
@@ -48,7 +48,7 @@
 
     <footer class="footer text-muted footer ">
         <div class="container text-light">
-            &copy; 2022 - BulkyBook.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-light">Privacy</a>
+            &copy; 2022 - BulkyBook
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
