--- a/BulkyBook.Web/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Index.cshtml
@@ -9,7 +9,7 @@
             <h2 class="text-dark">List of Categories</h2>
         </div>
         <div class="col-6 text-end">
-            <a class="btn btn-dark" asp-area="" asp-controller="Category" asp-action="Create">
+            <a class="btn btn-dark" asp-controller="Category" asp-action="Create">
                 <i class="bi bi-plus-circle"></i> &nbsp; Create New Category
             </a>
         </div>
@@ -38,8 +38,8 @@
                         <td class="text-center">@obj.DisplayOrder</td>
                         <td class="text-center">
                             <div class="d-grid gap-2 d-md-block">
-                                <a class="btn btn-dark" role="button" asp-area="" asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"> <i class="bi bi-pencil-square"></i></a>
-                                <a class="btn btn-dark" role="button" asp-area="" asp-controller="Category" asp-action="Remove" asp-route-id="@obj.Id"><i class="bi bi-trash3"></i></a>
+                                <a class="btn btn-dark" role="button" asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"> <i class="bi bi-pencil-square"></i></a>
+                                <a class="btn btn-dark" role="button" asp-controller="Category" asp-action="Remove" asp-route-id="@obj.Id"><i class="bi bi-trash3"></i></a>
                             </div>
                         </td>
                     </tr>
