--- a/BulkyBook.Web/Areas/Admin/Views/Category/Remove.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Remove.cshtml
@@ -28,7 +28,7 @@
                         <input asp-for="DisplayOrder" disabled type="number" class="form-control" id="order" placeholder="Display Order" />
                     </div>
                     <button type="submit" class="btn btn-dark m-2">Remove</button>
-                    <a class="btn btn-dark m-2" asp-area=" asp-controller="Category" asp-action="Index">
+                    <a class="btn btn-dark m-2" asp-controller="Category" asp-action="Index">
                         Back To List
                     </a>
                 </fieldset>
