--- a/BulkyBook.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBook.Web/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Types</a>
+                        </li>
                     </ul>
                     @*<form class="d-flex">
                         <input class="form-control me-sm-2" type="text" placeholder="Search">
