--- a/BulkyBook.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBook.Web/Views/Shared/_Layout.cshtml
@@ -33,6 +33,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Types</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a>
+                                <a class="dropdown-item text-dark" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Types</a>
+                            </div>
+                        </li>
                     </ul>
                     @*<form class="d-flex">
                         <input class="form-control me-sm-2" type="text" placeholder="Search">
