--- a/BulkyBook.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBook.Web/Views/Shared/_Layout.cshtml
@@ -27,18 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Types</a>
-                        </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="Content Management" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                            <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a>
-                                <a class="dropdown-item text-dark" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Types</a>
                                 <div class="dropdown-divider"></div>
+                                <a class="dropdown-item text-dark" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Types</a>
                             </div>
                         </li>
                     </ul>
