Product GET Action UI & Styling Fixes

--- a/BulkyBook.Web/Areas/Admin/Views/Category/Remove.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Remove.cshtml
@@ -16,7 +16,7 @@
 
     <form method="post" asp-action="Remove">
         <input asp-for="Id" hidden />
-        <div class="px-3">
+        <div class="py-3 px-4 border border-1 border-gray">
             <div>
                 <fieldset>
                     <div class="form-group m-3 mt-1">
