--- a/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -4,7 +4,7 @@
             <h2 class="text-dark">List of Products</h2>
         </div>
         <div class="col-6 text-end">
-            <a class="btn btn-dark" asp-controller="Product" asp-action="Create">
+            <a class="btn btn-dark" asp-controller="Product" asp-action="Upsert">
                 <i class="bi bi-plus-circle"></i> &nbsp; Create New Product
             </a>
         </div>
@@ -13,9 +13,8 @@
 
     <br />
 
-    <div class="px-3">
+    <div class="py-3 px-4">
         <table class="table caption-top table-bordered">
-            @*<caption>List of CoverTypes</caption>*@
             <thead>
                 <tr>
                     <th scope="col" class="text-center">Title</th>
