--- a/BulkyBook.Web/Areas/Admin/Views/Category/Create.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Create.cshtml
@@ -11,7 +11,7 @@
     <div class="pt-2" asp-validation-summary="All"></div>
 
     <form method="post">
-        <div class="px-3">
+        <div class="py-3 px-4 border border-1 border-gray">
             <div>
                 <fieldset>
                     <div class="form-group m-3 mt-1">
