--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Edit.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Edit.cshtml
@@ -16,7 +16,7 @@
     <div class="pt-2" asp-validation-summary="All"></div>
 
     <form method="post" asp-action="Edit">
-        <div class="px-3">
+        <div class="py-3 px-4 border border-1 border-gray">
             <div>
                 <fieldset>
                     <div class="form-group m-3 mt-1">
