--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
@@ -18,7 +18,7 @@
 
     <br />
 
-    <div class="px-3">
+    <div class="py-3 px-4">
         <table class="table caption-top table-bordered">
             @*<caption>List of CoverTypes</caption>*@
             <thead>
