--- a/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
@@ -70,6 +70,14 @@
                         <span asp-validation-for="CategoryId" class="text-danger"></span>
                     </div>
 
+                    <div class="form-group m-3 mt-1">
+                        <label asp-for="CoverTypeId" class="form-label"></label>
+                        <select asp-for="CoverTypeId" asp-items="@(ViewData["CoverTypes"] as IEnumerable<SelectListItem>)" class="form-select">
+                            <option disabled selected>--Select CoverType--</option>
+                        </select>
+                        <span asp-validation-for="CoverTypeId" class="text-danger"></span>
+                    </div>
+
                     <button type="submit" class="btn btn-dark m-2">Update</button>
                     <a class="btn btn-dark m-2" asp-controller="CoverType" asp-action="Index">
                         Back To List
