--- a/BulkyBook.Web/wwwroot/css/BootsWatchTheme.css
+++ b/BulkyBook.Web/wwwroot/css/BootsWatchTheme.css
@@ -2394,7 +2394,7 @@ progress {
     background-color: #fcfcfc;
     border-color: #ec9187;
     outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(217, 35, 15, 0.25);
+    /*box-shadow: 0 0 0 0.25rem rgba(217, 35, 15, 0.25);*/
 }
 
 .form-control::-webkit-date-and-time-value {
@@ -2610,7 +2610,7 @@ textarea.form-control-lg {
 .form-select:focus {
     border-color: #ec9187;
     outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(217, 35, 15, 0.25);
+    /*box-shadow: 0 0 0 0.25rem rgba(217, 35, 15, 0.25);*/
 }
 
 .form-select[multiple], .form-select[size]:not([size="1"]) {
