--- a/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product
+﻿@model BulkyBook.Models.ViewModels.ProductViewModel
 
 <div class="container p-3">
     <div class="row pt-4">
@@ -15,67 +15,67 @@
             <div>
                 <fieldset>
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="Title" class="form-label"></label>
-                        <input asp-for="Title" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Title" />
-                        <span asp-validation-for="Title" class="text-danger"></span>
+                        <label asp-for="Product.Title" class="form-label"></label>
+                        <input asp-for="Product.Title" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Title" />
+                        <span asp-validation-for="Product.Title" class="text-danger"></span>
                     </div>
 
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="Description" class="form-label"></label>
-                        <textarea rows="3" asp-for="Description" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Description"></textarea>
-                        <span asp-validation-for="Description" class="text-danger"></span>
+                        <label asp-for="Product.Description" class="form-label"></label>
+                        <textarea rows="3" asp-for="Product.Description" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Description"></textarea>
+                        <span asp-validation-for="Product.Description" class="text-danger"></span>
                     </div>
 
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="ISBN" class="form-label"></label>
-                        <input asp-for="ISBN" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter ISBN" />
-                        <span asp-validation-for="ISBN" class="text-danger"></span>
+                        <label asp-for="Product.ISBN" class="form-label"></label>
+                        <input asp-for="Product.ISBN" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter ISBN" />
+                        <span asp-validation-for="Product.ISBN" class="text-danger"></span>
                     </div>
 
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="Author" class="form-label"></label>
-                        <input asp-for="Author" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Author Name" />
-                        <span asp-validation-for="Author" class="text-danger"></span>
+                        <label asp-for="Product.Author" class="form-label"></label>
+                        <input asp-for="Product.Author" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Author Name" />
+                        <span asp-validation-for="Product.Author" class="text-danger"></span>
                     </div>
 
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="ListPrice" class="form-label"></label>
-                        <input asp-for="ListPrice" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter ListPrice" />
-                        <span asp-validation-for="ListPrice" class="text-danger"></span>
+                        <label asp-for="Product.ListPrice" class="form-label"></label>
+                        <input asp-for="Product.ListPrice" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter ListPrice" />
+                        <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
                     </div>
 
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="Price" class="form-label"></label>
-                        <input asp-for="Price" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price" />
-                        <span asp-validation-for="Price" class="text-danger"></span>
+                        <label asp-for="Product.Price" class="form-label"></label>
+                        <input asp-for="Product.Price" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price" />
+                        <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
 
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="PriceFor5" class="form-label"></label>
-                        <input asp-for="PriceFor5" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price For 5 Set of Books" />
-                        <span asp-validation-for="PriceFor5" class="text-danger"></span>
+                        <label asp-for="Product.PriceFor5" class="form-label"></label>
+                        <input asp-for="Product.PriceFor5" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price For 5 Set of Books" />
+                        <span asp-validation-for="Product.PriceFor5" class="text-danger"></span>
                     </div>
 
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="PriceFor10" class="form-label"></label>
-                        <input asp-for="PriceFor10" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price For 10 Set of Books" />
-                        <span asp-validation-for="PriceFor10" class="text-danger"></span>
+                        <label asp-for="Product.PriceFor10" class="form-label"></label>
+                        <input asp-for="Product.PriceFor10" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price For 10 Set of Books" />
+                        <span asp-validation-for="Product.PriceFor10" class="text-danger"></span>
                     </div>
 
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="CategoryId" class="form-label"></label>
-                        <select asp-for="CategoryId" asp-items="ViewBag.Categories" class="form-select">
+                        <label asp-for="Product.CategoryId" class="form-label"></label>
+                        <select asp-for="Product.CategoryId" asp-items="@Model.Categories" class="form-select">
                             <option disabled selected>--Select Category--</option>
                         </select>
-                        <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                     </div>
 
                     <div class="form-group m-3 mt-1">
-                        <label asp-for="CoverTypeId" class="form-label"></label>
-                        <select asp-for="CoverTypeId" asp-items="@(ViewData["CoverTypes"] as IEnumerable<SelectListItem>)" class="form-select">
+                        <label asp-for="Product.CoverTypeId" class="form-label"></label>
+                        <select asp-for="Product.CoverTypeId" asp-items="@Model.CoverTypes" class="form-select">
                             <option disabled selected>--Select CoverType--</option>
                         </select>
-                        <span asp-validation-for="CoverTypeId" class="text-danger"></span>
+                        <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
                     </div>
 
                     <button type="submit" class="btn btn-dark m-2">Update</button>
