--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Create.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Create.cshtml
@@ -1,4 +1,8 @@
-﻿@model CoverType
+﻿@{
+    ViewData["Title"] = "CoverType Create";
+}
+
+@model CoverType
 
 <div class="container p-3">
     <div class="row pt-4">
