--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<CoverType>
-@{
-    ViewData["Title"] = "Index";
+﻿@{
+    ViewData["Title"] = "CoverTypes";
 }
+
+@model IEnumerable<CoverType>
 
 <div class="container p-3">
     <div class="row pt-4">
