--- a/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,4 +1,8 @@
-﻿@model BulkyBook.Models.ViewModels.ProductViewModel
+﻿@{
+    ViewData["Title"] = "CoverType Upsert";
+}
+
+@model BulkyBook.Models.ViewModels.ProductViewModel
 
 <div class="container p-3">
     <div class="row pt-4">
