--- a/BulkyBook.Web/Areas/Admin/Views/Category/Create.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Create.cshtml
@@ -1,4 +1,8 @@
-﻿@model Category
+﻿@{
+    ViewData["Title"] = "Category Create";
+}
+
+@model Category
 
 <div class="container p-3">
     <div class="row pt-4">
