--- a/BulkyBook.Web/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<Category>
-@{
-    ViewData["Title"] = "Index";
+﻿@{
+    ViewData["Title"] = "Categories";
 }
+
+@model IEnumerable<Category>
 
 <div class="container p-3">
     <div class="row pt-4">
