--- a/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="container p-3">
+﻿@{
+    ViewData["Title"] = "Products";
+}
+
+<div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
             <h2 class="text-dark">List of Products</h2>
