--- a/BulkyBook.Web/Areas/Admin/Views/Category/Create.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Create.cshtml
@@ -4,15 +4,15 @@
 
 @model Category
 
-<div class="container p-3">
-    <div class="row pt-4">
+<div class="container p-3 pt-2">
+    <div class="row">
         <div class="col-6">
-            <h2 class="text-dark">Create Category</h2>
+            <h3 class="display-7 text-dark font-weight-bold">Create Category</h3>
         </div>
         <hr />
     </div>
 
-    <div class="pt-2" asp-validation-summary="All"></div>
+    <div asp-validation-summary="All"></div>
 
     <form method="post">
         <div class="py-3 px-4 border border-1 border-gray">
