--- a/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -2,10 +2,10 @@
     ViewData["Title"] = "Products";
 }
 
-<div class="container p-3">
-    <div class="row pt-4">
+<div class="container p-3 pt-2">
+    <div class="row">
         <div class="col-6">
-            <h2 class="text-dark">List of Products</h2>
+            <h3 class="display-7 text-dark font-weight-bold">List of Products</h3>
         </div>
         <div class="col-6 text-end">
             <a class="btn btn-dark" asp-controller="Product" asp-action="Upsert">
@@ -15,10 +15,8 @@
         <hr />
     </div>
 
-    <br />
-
     <div class="py-3 px-4">
-        <table class="table caption-top table-bordered">
+        <table class="table">
             <thead>
                 <tr>
                     <th scope="col" class="text-center">Title</th>
