--- a/BulkyBook.Web/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Index.cshtml
@@ -37,8 +37,8 @@
                         <td class="text-center">@obj.DisplayOrder</td>
                         <td class="text-center">
                             <div class="d-grid gap-2 d-md-block">
-                                <a class="btn btn-dark" role="button" asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"> <i class="bi bi-pencil-square"></i></a>
-                                <a class="btn btn-dark" role="button" asp-controller="Category" asp-action="Remove" asp-route-id="@obj.Id"><i class="bi bi-trash3"></i></a>
+                                <a class="btn btn-outline-dark" role="button" asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"><i class="bi bi-pencil"></i></a>
+                                <a class="btn btn-outline-dark" role="button" asp-controller="Category" asp-action="Remove" asp-route-id="@obj.Id"><i class="bi bi-trash3"></i></a>
                             </div>
                         </td>
                     </tr>
