--- a/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
@@ -7,7 +7,7 @@
 <div class="container p-3 pt-2 row">
     <div class="row">
         <div class="col-6">
-            <h3 class="display-7 text-dark font-weight-bold">Edit Product</h3>
+            <h3 class="display-7 text-dark font-weight-bold">@(Model.Product.Id != 0 ? "Update" : "Create") Product</h3>
         </div>
         <hr />
     </div>
@@ -67,7 +67,7 @@
 
                     <div class="form-group m-3 mt-1">
                         <label asp-for="Product.ImageUrl" class="form-label"></label>
-                        <input class="form-control form-control-sm" id="formFileSm" type="file">
+                        <input class="form-control form-control-sm" id="formFile" type="file">
                     </div>
 
                     <div class="form-group m-3 mt-1">
@@ -86,7 +86,14 @@
                         <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
                     </div>
 
-                    <button type="submit" class="btn btn-dark m-2">Update</button>
+                    @if (Model.Product.Id != 0)
+                    {
+                        <button type="submit" class="btn btn-dark m-2">Update</button>
+                    }
+                    else
+                    {
+                        <button type="submit" onclick="return ValidateInput()" class="btn btn-dark m-2">Create</button>
+                    }
                     <a class="btn btn-dark m-2" asp-controller="CoverType" asp-action="Index">
                         Back To List
                     </a>
@@ -100,4 +107,20 @@
     @{
     <partial name="_ValidationScriptsPartial" />
     }
+<script>
+        function ValidateInput(){
+            if(document.getElementById("formFile").value == '') {
+                Swal.fire({
+                icon: 'error',
+                title: 'Oops...',
+                text: 'Please upload an Image!',
+                //footer: '<a href="">Why do I have this issue?</a>'
+    });
+                return false;
+            }
+            else {
+                return true;
+            }
+        }
+</script>
 }
