--- a/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
@@ -67,7 +67,7 @@
 
                     <div class="form-group m-3 mt-1">
                         <label asp-for="Product.ImageUrl" class="form-label"></label>
-                        <input class="form-control form-control-sm" id="formFile" type="file">
+                        <input class="form-control" name="file" form-control-sm" id="formFile" type="file">
                     </div>
 
                     <div class="form-group m-3 mt-1">
