Include Properties In Progress

--- a/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -16,7 +16,7 @@
     </div>
 
     <div class="py-3 px-4">
-        <table class="table">
+        <table id="table" class="table">
             <thead>
                 <tr>
                     <th scope="col" class="text-center">Title</th>
@@ -30,3 +30,7 @@
         </table>
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
