Include Properties with DataTables

--- a/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -16,15 +16,15 @@
     </div>
 
     <div class="py-3 px-4">
-        <table id="table" class="table">
+        <table class="table" id="table" style="width: 100%">
             <thead>
-                <tr>
-                    <th scope="col" class="text-center">Title</th>
-                    <th scope="col" class="text-center">ISBN</th>
-                    <th scope="col" class="text-center">Price</th>
-                    <th scope="col" class="text-center">Author</th>
-                    <th scope="col" class="text-center">Category</th>
-                    <th scope="col" class="text-center">Action</th>
+                <tr class="text-left">
+                    <th scope="col" class="text-left">Title</th>
+                    <th scope="col" class="text-left">ISBN</th>
+                    <th scope="col" class="text-left">Price</th>
+                    <th scope="col" class="text-left">Author</th>
+                    <th scope="col" class="text-left">Category</th>
+                    <th scope="col" class="text-left">Action</th>
                 </tr>
             </thead>
         </table>
@@ -32,5 +32,5 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/product.js"></script>
+<script src="~/js/product.js"></script>
 }
