--- a/BulkyBook.Web/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Index.cshtml
@@ -22,9 +22,9 @@
             @*<caption>List of Categories</caption>*@
             <thead>
                 <tr>
-                    <th scope="col" class="text-center">Category Name</th>
-                    <th scope="col" class="text-center">Display Order</th>
-                    <th scope="col" class="text-center">Action</th>
+                    <th scope="col" class="text-left">Category Name</th>
+                    <th scope="col" class="text-left">Display Order</th>
+                    <th scope="col" class="text-left">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -33,9 +33,9 @@
                     <tr>
                         @*                <th scope="row">1</th>
                         *@
-                        <td class="text-center">@obj.Name</td>
-                        <td class="text-center">@obj.DisplayOrder</td>
-                        <td class="text-center">
+                        <td class="text-left">@obj.Name</td>
+                        <td class="text-left">@obj.DisplayOrder</td>
+                        <td class="text-left">
                             <div class="d-grid gap-2 d-md-block">
                                 <a class="btn btn-outline-dark" role="button" asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"><i class="bi bi-pencil"></i></a>
                                 <a class="btn btn-outline-dark" role="button" asp-controller="Category" asp-action="Remove" asp-route-id="@obj.Id"><i class="bi bi-trash3"></i></a>
