--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
@@ -22,8 +22,8 @@
             @*<caption>List of CoverTypes</caption>*@
             <thead>
                 <tr>
-                    <th scope="col" class="text-center">CoverType Name</th>
-                    <th scope="col" class="text-center">Action</th>
+                    <th scope="col" class="text-left">CoverType Name</th>
+                    <th scope="col" class="text-left">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -32,8 +32,8 @@
                     <tr>
                         @*                <th scope="row">1</th>
                         *@
-                        <td class="text-center">@obj.Name</td>
-                        <td class="text-center">
+                        <td class="text-left">@obj.Name</td>
+                        <td class="text-left">
                             <div class="d-grid gap-2 d-md-block">
                                 <a class="btn btn-outline-dark" role="button" asp-controller="CoverType" asp-action="Edit" asp-route-id="@obj.Id"><i class="bi bi-pencil"></i></a>
                                 <a class="btn btn-outline-dark" role="button" asp-controller="CoverType" asp-action="Remove" asp-route-id="@obj.Id"><i class="bi bi-trash3"></i></a>
