Uploading Images Implemented with UI Changes

--- a/BulkyBook.Web/Areas/Admin/Views/Category/Create.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Create.cshtml
@@ -28,8 +28,9 @@
                         <input asp-for="DisplayOrder" type="number" class="form-control" id="order" placeholder="Display Order" />
                         <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                     </div>
-                    <button type="submit" class="btn btn-dark m-2">Create</button>
-                    <a class="btn btn-dark m-2" asp-controller="Category" asp-action="Index">
+                    <hr class="my-4">
+                    <button type="submit" class="btn btn-dark mx-2">Create</button>
+                    <a class="btn btn-dark mx-2" asp-controller="Category" asp-action="Index">
                         Back To List
                     </a>
                 </fieldset>
