--- a/BulkyBook.Web/Areas/Admin/Views/Category/Remove.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Category/Remove.cshtml
@@ -27,8 +27,9 @@
                         <label asp-for="DisplayOrder" class="form-label"></label>
                         <input asp-for="DisplayOrder" disabled type="number" class="form-control" id="order" placeholder="Display Order" />
                     </div>
-                    <button type="submit" class="btn btn-dark m-2">Remove</button>
-                    <a class="btn btn-dark m-2" asp-controller="Category" asp-action="Index">
+                    <hr class="my-4">
+                    <button type="submit" class="btn btn-dark mx-2">Remove</button>
+                    <a class="btn btn-dark mx-2" asp-controller="Category" asp-action="Index">
                         Back To List
                     </a>
                 </fieldset>
