--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Edit.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Edit.cshtml
@@ -23,8 +23,9 @@
                         <input asp-for="Name" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name" />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
-                    <button type="submit" class="btn btn-dark m-2">Update</button>
-                    <a class="btn btn-dark m-2" asp-controller="CoverType" asp-action="Index">
+                    <hr class="my-4">
+                    <button type="submit" class="btn btn-dark mx-2">Update</button>
+                    <a class="btn btn-dark mx-2" asp-controller="CoverType" asp-action="Index">
                         Back To List
                     </a>
                 </fieldset>
