--- a/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
@@ -14,94 +14,130 @@
 
     <div asp-validation-summary="All"></div>
 
-    <form method="post" asp-action="Upsert" enctype="multipart/form-data">
-        <div class="py-3 px-4 border border-1 border-gray">
-            <div>
-                <fieldset>
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.Title" class="form-label"></label>
-                        <input asp-for="Product.Title" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Title" />
-                        <span asp-validation-for="Product.Title" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.Description" class="form-label"></label>
-                        <textarea rows="3" asp-for="Product.Description" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Description"></textarea>
-                        <span asp-validation-for="Product.Description" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.ISBN" class="form-label"></label>
-                        <input asp-for="Product.ISBN" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter ISBN" />
-                        <span asp-validation-for="Product.ISBN" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.Author" class="form-label"></label>
-                        <input asp-for="Product.Author" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Author Name" />
-                        <span asp-validation-for="Product.Author" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.ListPrice" class="form-label"></label>
-                        <input asp-for="Product.ListPrice" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter ListPrice" />
-                        <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.Price" class="form-label"></label>
-                        <input asp-for="Product.Price" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price" />
-                        <span asp-validation-for="Product.Price" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.PriceFor5" class="form-label"></label>
-                        <input asp-for="Product.PriceFor5" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price For 5 Set of Books" />
-                        <span asp-validation-for="Product.PriceFor5" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.PriceFor10" class="form-label"></label>
-                        <input asp-for="Product.PriceFor10" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price For 10 Set of Books" />
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.ImageUrl" class="form-label"></label>
-                        <input class="form-control" name="file" form-control-sm" id="formFile" type="file">
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.CategoryId" class="form-label"></label>
-                        <select asp-for="Product.CategoryId" asp-items="@Model.Categories" class="form-select">
-                            <option disabled selected>--Select Category--</option>
-                        </select>
-                        <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group m-3 mt-1">
-                        <label asp-for="Product.CoverTypeId" class="form-label"></label>
-                        <select asp-for="Product.CoverTypeId" asp-items="@Model.CoverTypes" class="form-select">
-                            <option disabled selected>--Select CoverType--</option>
-                        </select>
-                        <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
-                    </div>
-
-                    @if (Model.Product.Id != 0)
+    <div class="container py-3 px-4 border border-1 border-gray">
+        <main>
+            <div class="row g-5">
+                <div class="col-md-5 col-lg-4 order-md-last">
+                    @if (Model.Product.ImageUrl != null)
                     {
-                        <button type="submit" class="btn btn-dark m-2">Update</button>
+                        <div class="list-group my-3">
+                            <div class="list-group-item d-flex justify-content-between lh-sm">
+                                <img src="@Model.Product.ImageUrl" alt="Book Image" class="img-thumbnail border" style="width:100%; height:auto; object-fit: contain;" />
+
+                            </div>
+                        </div>
                     }
                     else
                     {
-                        <button type="submit" onclick="return ValidateInput()" class="btn btn-dark m-2">Create</button>
+                        <div></div>
                     }
-                    <a class="btn btn-dark m-2" asp-controller="CoverType" asp-action="Index">
-                        Back To List
-                    </a>
-                </fieldset>
+
+                    @*<form class="card p-2">
+                        <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Promo code">
+                        <button type="submit" class="btn btn-secondary">Redeem</button>
+                        </div>
+                        </form>*@
+                </div>
+                <div class="col-md-7 col-lg-8">
+                    @*<h4 class="mb-3">Billing address</h4>*@
+                    <form method="post" asp-action="Upsert" enctype="multipart/form-data" class="needs-validatio">
+                        <input asp-for="Product.Id" hidden />
+                        <input asp-for="Product.ImageUrl" hidden />
+                        <div class="row g-3">
+                            <div class="col-sm-12">
+                                <label asp-for="Product.Title" class="form-label"></label>
+                                <input asp-for="Product.Title" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Title" />
+                                <span asp-validation-for="Product.Title" class="text-danger"></span>
+                            </div>
+
+                            <div class="row g-3">
+                                <div class="col-sm-12">
+                                    <label asp-for="Product.Description" class="form-label"></label>
+                                    <textarea rows="3" asp-for="Product.Description" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Description"></textarea>
+                                    <span asp-validation-for="Product.Description" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <label asp-for="Product.ISBN" class="form-label"></label>
+                                <input asp-for="Product.ISBN" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter ISBN" />
+                                <span asp-validation-for="Product.ISBN" class="text-danger"></span>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <label asp-for="Product.Author" class="form-label"></label>
+                                <input asp-for="Product.Author" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Author Name" />
+                                <span asp-validation-for="Product.Author" class="text-danger"></span>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <label asp-for="Product.ListPrice" class="form-label"></label>
+                                <input asp-for="Product.ListPrice" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter ListPrice" />
+                                <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <label asp-for="Product.Price" class="form-label"></label>
+                                <input asp-for="Product.Price" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price" />
+                                <span asp-validation-for="Product.Price" class="text-danger"></span>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <label asp-for="Product.PriceFor5" class="form-label"></label>
+                                <input asp-for="Product.PriceFor5" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price For 5 Set of Books" />
+                                <span asp-validation-for="Product.PriceFor5" class="text-danger"></span>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <label asp-for="Product.PriceFor10" class="form-label"></label>
+                                <input asp-for="Product.PriceFor10" type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Price" />
+                                <span asp-validation-for="Product.PriceFor10" class="text-danger"></span>
+                            </div>
+
+                            <div class="col-sm-12">
+                                <label asp-for="Product.ImageUrl" class="form-label"></label>
+                                <input class="form-control" name="file" form-control-sm" id="formFile" type="file">
+                            </div>
+
+                            <div class="col-md-6">
+                                <label asp-for="Product.CategoryId" class="form-label"></label>
+                                <select asp-for="Product.CategoryId" asp-items="@Model.Categories" class="form-select">
+                                    <option disabled selected>--Select Category--</option>
+                                </select>
+                                <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                            </div>
+
+                            <div class="col-md-6">
+                                <label asp-for="Product.CoverTypeId" class="form-label"></label>
+                                <select asp-for="Product.CoverTypeId" asp-items="@Model.CoverTypes" class="form-select">
+                                    <option disabled selected>--Select CoverType--</option>
+                                </select>
+                                <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
+                            </div>
+
+                        </div>
+
+                        <hr class="my-4">
+
+                        @if (Model.Product.Id != 0)
+                        {
+                            <button type="submit" class="btn btn-dark mx-2">Update</button>
+                        }
+                        else
+                        {
+                            <button type="submit" onclick="return ValidateInput()" class="btn btn-dark m-2">Create</button>
+                        }
+                        <a class="btn btn-dark mx-2" asp-controller="Product" asp-action="Index">
+                            Back To List
+                        </a>
+                    </form>
+                </div>
             </div>
-        </div>
-    </form>
+        </main>
+    </div>
 </div>
+
 
 @section Scripts {
     @{
