--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
@@ -14,7 +14,7 @@
                 <i class="bi bi-plus-circle"></i> &nbsp;Create New CoverType
             </a>
         </div>
-        <hr />
+        <hr class="mt-2 mb-0" />
     </div>
 
     <div class="py-3 px-4">
