--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Remove.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Remove.cshtml
@@ -23,8 +23,9 @@
                         <label asp-for="Name" class="form-label"></label>
                         <input asp-for="Name" type="text" disabled class="form-control" id="name" aria-describedby="name" placeholder="Enter Name" />
                     </div>
-                    <button type="submit" class="btn btn-dark m-2">Remove</button>
-                    <a class="btn btn-dark m-2" asp-controller="CoverType" asp-action="Index">
+                    <hr class="my-4">
+                    <button type="submit" class="btn btn-dark mx-2">Remove</button>
+                    <a class="btn btn-dark mx-2" asp-controller="CoverType" asp-action="Index">
                         Back To List
                     </a>
                 </fieldset>
