DELETE API Endpoint Implemented

--- a/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -15,8 +15,8 @@
         <hr class="mt-2 mb-0" />
     </div>
 
-    <div class="py-3 px-4">
-        <table class="table" id="table" style="width: 100%">
+    <div class="py-3 px-4" style="overflow-x: auto">
+        <table class="table" id="table">
             <thead>
                 <tr class="text-left">
                     <th scope="col" class="text-left">Title</th>
